# RandomCoffee

./: README.md  api.py  app.py  compose-dev.yaml  compose.yaml  state.py
.github/workflows/: pr_checks.yml  pytest.yml  static_checks.yml
.streamlit/: config.toml
docker/: Backend  Frontend  nginx.conf
pages/: 1_Register.py  2_Login.py  3_Dashboard.py  4_Profile.py  5_API_Docs.py
random_coffee_streamlit 2/: README.md  app.py  state.py
random_coffee_streamlit 2/pages/: 1_Register.py  2_Login.py  3_Dashboard.py  4_Profile.py  5_API_Docs.py
randomcoffee/: .flake8  .pre-commit-config.yaml  maintainability.py  pyproject.toml
randomcoffee/backend/: docker-entrypoint.sh  requirements.txt
randomcoffee/frontend/: docker-entrypoint.sh  requirements.txt
randomcoffee/src/db/: __init__.py  init.sql  sql.py
randomcoffee/src/emailsender/: __init__.py  provider.py
randomcoffee/src/envconfig/: __init__.py  _config.py
randomcoffee/src/fastAPI/: app.py  auth.py  doc.md  jwt_utils.py  router.py  schemas.py
randomcoffee/src/front/: README.md  api.py  app.py  state.py
randomcoffee/src/front/pages/: 1_Register.py  2_Login.py  3_Dashboard.py  4_Profile.py  5_API_Docs.py
randomcoffee/src/interest_names/: __init__.py
randomcoffee/src/pairalgo/: __init__.py  __main__.py  pairing.py
randomcoffee/src/randomcoffee/: __init__.py  app.py  auth.py  schemas.py  storage.py
randomcoffee/tests/: test_api.py  test_db.py  test_email.py  test_envconfig.py  test_pairings.py
