[project]
name = "randomcoffee"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew Pavlov",email = "and.pavlov@innopolis.university"},
    {name = "Darya Stepanova",email = "da.stepanova@innopolis.university"},
    {name = "Fanis Zinnurov",email = "f.zinnurov@innopolis.university"},
    {name = "Ramil Aminov",email = "r.aminov@innopolis.university"},
    {name = "Timur Usmanov",email = "t.usmanov@innopolis.university"}
]
requires-python = ">=3.14"
dependencies = [
    "email-validator (>=2.3.0,<3.0.0)",
    "fastapi (>=0.116.0,<1.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "uvicorn (>=0.35.0,<1.0.0)",
    "aiosmtplib (>=5.1.0,<6.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "streamlit (==1.56.0)",
    "requests (==2.33.1)"
]

[tool.poetry]
packages = [
    {include = "db", from = "src"},
    {include = "emailsender", from = "src"},
    {include = "envconfig", from = "src"}, 
    {include = "fastAPI", from = "src"},
    {include = "front", from = "src"},
    {include = "interest_names", from = "src"},
    {include = "randomcoffee", from = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[pytest]
python_files = ["tests/"]

[dependency-groups]
dev = [
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "bandit (>=1.9.4,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "radon (>=6.0.1,<7.0.0)",
]
